# bourgade

./: README.md  pyproject.toml
src/bourgade/: __init__.py
src/bourgade/utils/: dicts.py
